# graphql-api

./: .gitignore  CHANGELOG.rst  CONTRIBUTE.md  HLint.hs  LICENSE.Apache-2.0  LICENSE.BSD3  Makefile  README.md  circle.yml  examples  graphql-api-doctests.tix  graphql-api.cabal  graphql-haskell.cabal  package.yaml  stack-8.0.yaml  stack.yaml
.circleci/: config.yml
benchmarks/: Main.hs  Validation.hs
cmd/: Main.hs
docs/: .gitignore  Makefile  README.md
docs/source/: conf.py  index.rst
docs/source/tutorial/: Introduction.lhs  package.yaml  tutorial.cabal
examples/: InputObject.hs  UnionExample.hs
graphql-wai/: graphql-wai.cabal  package.yaml
graphql-wai/tests/: Tests.hs
scripts/: build-image  hindent-everything  hpc-ratchet  image-tag  lint  patch_tix.sh
src/: GraphQL.hs
src/Data/: GraphQL.hs
src/GraphQL/: API.hs  Application.hs  ContentTypes.hs  Definitions.hs  Input.hs  Instrument.hs  Introspection.hs  Logging.hs  MuckTom.hs  Muckaround.hs  Output.hs  Resolver.hs  Schema.hs  Server.hs  TypeApi.hs  TypedApi.hs  TypedSchema.hs  Validation.hs  Value.hs
tests/: ASTSpec.hs  ASTTests.hs  Doctests.hs  EndToEndSpec.hs  EndToEndTests.hs  EnumTests.hs  ExampleSchema.hs  Main.hs  MutationTests.hs  OrderedMapSpec.hs  OrderedMapTests.hs  ResolverSpec.hs  ResolverTests.hs  SchemaSpec.hs  SchemaTests.hs  Spec.hs  TypeApiTests.hs  TypeTests.hs  Utils.hs  ValidationSpec.hs  ValidationTests.hs  ValueSpec.hs  ValueTests.hs
tests/Examples/: FileSystem.hs  InputObject.hs  UnionExample.hs
tests/doctests/: Main.hs
ticks/: graphql-api.a.txt  graphql-api.txt
(+29 files in other folders)
