name:          tutorial
version:       0.0.1
synopsis:      GraphQL library tutorial
license:       Apache
license-file:  LICENSE
maintainer:    tehunger@gmail.com, Jonathan M. Lange <jml@mumak.net>
build-type:    Simple
cabal-version: >=1.10


library
  exposed-modules:     Introduction
  build-depends:       base >= 4.9 && < 5
                     , protolude
                     , graphql-api
                     , markdown-unlit >= 0.4
  default-language:    Haskell2010
  ghc-options:         -Wall -pgmL markdown-unlit
